# photon-memristor-sim

./: .editorconfig  .env.example  .gitignore  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Makefile  PROJECT_CHARTER.md  README.md  SECURITY.md  TERRAGON_SDLC_COMPLETE_DOCUMENTATION.md  TERRAGON_SDLC_COMPLETION_REPORT.md  TERRAGON_SDLC_ENHANCED_EXECUTION_REPORT.md  TERRAGON_SDLC_QUANTUM_BREAKTHROUGH_REPORT.md  TERRAGON_SDLC_V4_FINAL_COMPLETION_REPORT.md  TERRAGON_SDLC_V4_ULTIMATE_COMPLETION_REPORT.md  advanced_memristor_generation1_report.json  comprehensive_quality_gates.py  comprehensive_quality_gates_report.json  comprehensive_quality_gates_system.py  comprehensive_quality_gates_validator.py  deployment_report.json  enhanced_error_handling.py  enhanced_scaling_system.py  generation1_demo.py  generation1_report.json  generation1_research_results_20250827_224404.json  generation1_research_results_20250827_230446.json  generation1_simple_demo.py  generation2_clean.py  generation2_monitoring_report.json  generation2_monitoring_system.py  generation2_robust_comprehensive_report.json  (+41 more)
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
.terragon/: config.yaml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  ROADMAP.md
docs/adr/: 0000-adr-template.md  0001-rust-core-python-bindings.md  0002-performance-optimization-strategy.md  0003-neural-network-architecture-integration.md
examples/: advanced_memristor_demo.py  basic_usage.py  comprehensive_quality_gates_demo.py  generation1_enhanced_demo.py  generation1_research_demo.py  generation1_simple_research_demo.py  generation2_autonomous_demo.py  generation2_enterprise_robustness.py  generation2_fixed_demo.py  generation2_robust_comprehensive_demo.py  generation2_robust_demo.py  generation2_ultimate_robust_demo.py  generation3_autonomous_demo.py  generation3_hyperscale_performance.py  generation3_hyperscale_ultimate_demo.py  generation3_hyperscale_ultimate_system.py  generation3_scalable_demo.py  generation4_revolutionary_demo.py  global_deployment_demo.py  quantum_task_planning_demo.py  robust_photonic_simulation.py  scalable_photonic_computation.py
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
photon_memristor/: crossbar.py  memristor.py  photonic_link.py
photon_memristor_sim/: __init__.py  crossbar.py  demo.py  memristor.py  pcm.py  photonic.py
python/photon_memristor_sim/: __init__.py  advanced_memristor_interface.py  ai_optimization.py  devices.py  edge_computing.py  gpu_accelerated.py  hyperscale_performance.py  jax_interface.py  neural_networks.py  performance_optimizer.py  pure_python_fallbacks.py  quantum_hybrid.py  quantum_planning.py  resilience.py  robust_error_handling.py  training.py  utils.py  visualization.py
src/: lib.rs  python_bindings.rs  test_generation1.py  wasm_bindings.rs
src/cloud/: deployment.rs  distributed_optimizer.rs  mod.rs  monitoring.rs  scaling.rs
src/core/: advanced_memristor_models.rs  coupling.rs  error.rs  error_handling.rs  logging.rs  mod.rs  monitoring.rs  propagation.rs  robust_validation.rs  types.rs  validation.rs  waveguide.rs
src/devices/: mod.rs  mzi.rs  oxide.rs  pcm.rs  ring_resonator.rs  traits.rs
src/optimization/: codesign.rs  mod.rs  quantum_inspired.rs
src/performance/: cache.rs  hyperscale_optimization.rs  mod.rs  parallel.rs
src/research/: breakthrough_discovery.rs  experimental_framework.rs  mod.rs  novel_algorithms.rs
src/simulation/: array.rs  cache.rs  mod.rs  result.rs  solver.rs  streaming.rs
src/testing/: comprehensive_test_suite.rs  coverage_analysis.rs  integration_tests.rs  mod.rs  performance_tests.rs  security_tests.rs  unit_tests.rs
src/utils/: mod.rs
tests/: test_basic.py  test_memristor.py  test_performance_optimized.py  test_photon_memristor.py  test_resilience_comprehensive.py
